0.5.0 - currently working on
- [#1891] Change: templatehelper::createRecursivePageList should cache its results
- [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests
- [#1861] Change: Statically cache the results of hasTableColumnUid and getListOfAllTables
- [#1860] Change: Cache the results of enableFields
- [#1857] Change: markTableAsDirty() now accepts comma-separated list of table names
- [#1870] Fix: createRelation() now throws exception on negative UIDs
- [#1837] Change: Add discardInstance() to the header proxy factory
- [#1797] Feature: Test that the mailer factory can create real mailers
- [#1831] Change: Remove $this->originalConfiguration from the configuration proxy's testcase
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1526] Feature: Use a strategy for setting HTTP headers
- [#1772] Feature: Add constants for frequently used error messages
- [#1457] Change: Use the configuration proxy in the template helper
- [#1739] Fix: template.php imported twice
- [#1744] Fix: CSS bug in the configuration check warning
- [#1262] Feature: Automatically remove surplus blank lines from the e-mail body

0.4.0 - released 2008-03-10
- [#1726] Fix: Parts of testingFramework broken with TYPO3 4.2 (>rev 3365)
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2
- [#1627] Feature: Create a file with common constants
- [#1548] Change: Move templating functions from realty_pi1 to the template helper
- [#1694] Fix: templatehelper::pi_getLL drops the $useHtmlSpecialChars parameter
- [#1439] Feature: Add functions in the testing framework to create dummy FE users and FE user groups
- [#1550] Feature: Add a config check for e-mail addresses
- [#1681] Feature: Add templatehelper::getListViewConfValueInteger and ::getListViewConfValueBoolean
- [#1104] Change: Use type hinting for function parameters